[project]
name = "dataclean-env"
version = "1.0.0"
description = "Real-world data cleaning and validation environment for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.32.3",
    "gradio==3.50.2",
    "huggingface_hub==0.20.3",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.openenv]
name = "data-cleaning-env"
version = "1.0.0"
entry_point = "server.app:main"
framework = "fastapi"
tasks = ["task_easy", "task_medium", "task_hard"]
reset_endpoint = "/reset"
step_endpoint = "/step"
state_endpoint = "/state"
health_endpoint = "/health"
